--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -4,3 +4,4 @@ aws_key_name = ""
 aws_region = ""
 my_ip = ""
 cidr_base = "" // please see note in README.md
+vpn_passwd = "" // please see note in README.md
